tests/expectations/compiler/statements/non_existant_vars_mul_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown variable `x`
    --> compiler-test:5:18
     |
   5 |     \tlet b: u8 = x*z;
     |                  ^
Error [ETYC0372005]: Unknown variable `z`
    --> compiler-test:5:20
     |
   5 |     \tlet b: u8 = x*z;
     |                    ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
